--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <h3>My favorite players</h3>
     <ul>
         <li>Lionel <b>Messi</b></li>
-        <li>David Becham</li>
-        <li>Javier <i>"Chicarito"</i> Hernandez</li>
-        <li> Andres Iniesta</li>
-        <li> Xavi Hernandez</li>
+        <li>David Beckham</li>
+        <li>Javier <i>"Chicharito"</i> Hernandez</li>
+        <li>Andres Iniesta</li>
+        <li>Xavi Hernandez</li>
     </ul>
-    <img src="C:/Users/marca/Downloads/messiWorldCup.jpg" alt="Favorite Soccer Player" width=450" height="300">
-    <h3>Favorite Soccer Players compared </h3>
-    <table border=""1">
+    <img src="C:/Users/marca/Downloads/messiWorldCup.jpg" alt="Favorite Soccer Player" width="450" height="300">
+    <h3>Favorite Soccer Players compared</h3>
+    <table border="1">
         <tr>
-            <th>Achivements</th>
-            <th> Messi </th>
+            <th>Achievements</th>
+            <th>Messi</th>
             <th>Beckham</th>
             <th>Chicharito</th>
             <th>Iniesta</th>
@@ -38,7 +38,7 @@
             <td>&#x2713;</td>
         </tr>
         <tr>
-            <td>Champions Leauge</td>
+            <td>Champions League</td>
             <td>&#x2713;</td>
             <td>&#x2713;</td>
             <td>&#x2717;</td>  
@@ -56,6 +56,5 @@
     </table>
     <hr>
     <p>2/19/25 - Marc Flores</p>
-    
 </body>
 </html>
