--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>Andres Iniesta</li>
         <li>Xavi Hernandez</li>
     </ul>
-    <img src="C:/Users/marca/Downloads/messiWorldCup.jpg" alt="Favorite Soccer Player" width="450" height="300">
+    <img src="images/messiWorldCup.jpg" alt="Favorite Soccer Player" width="450" height="300">
     <h3>Favorite Soccer Players compared</h3>
     <table border="1">
         <tr>
