--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2>About Me</h2>
     <p>I'm a 19-year-old, second-year computer science major at the College of Staten Island.</p>
     <h2>My Hobbies</h2>
-    <p>I enjoy playing video games, reading books, and hiking during my free time.</p>
+    <p>I enjoy playing video games, reading books, and playing guitar, and playing soccer during my free time.</p>
     <p>Check out my <a href="https://marcaflores.github.io/">READ ME</a> for more information.</p>
     <h3>My favorite players</h3>
     <ul>
