--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <p>I'm a 19-year-old, second-year computer science major at the College of Staten Island.</p>
     <h2>My Hobbies</h2>
     <p>I enjoy playing video games, reading books, and playing guitar, and playing soccer during my free time.</p>
-    <p>Check out my <a href="https://marcaflores.github.io/">READ ME</a> for more information.</p>
+    <p>Check out my<a href="https://github.com/marcaflores/marcaflores.github.io/blob/main/README.md" target="_blank">READ ME</a>
+        for more information.</p>
     <h3>My favorite players</h3>
     <ul>
         <li>Lionel <b>Messi</b></li>
