updated the link to readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>My Hobbies</h2>
     <p>I enjoy playing video games, reading books, and playing guitar, and playing soccer during my free time.</p>
    
-    <p>Check out my <a href="https://github.com/marcaflores/marcaflores.github.io/blob/main/README.md" target="_blank">READ ME</a>
+    <p>Check out my <a href="https://github.com/marcaflores/marcaflores.github.io/README.md" target="_blank">READ ME</a>
 
         for more information.</p>
     <h3>My favorite players</h3>
