--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <p>I'm a 19-year-old, second-year computer science major at the College of Staten Island.</p>
     <h2>My Hobbies</h2>
     <p>I enjoy playing video games, reading books, and playing guitar, and playing soccer during my free time.</p>
+<h2>Labs</h2>
+<ul>
+    <p>Check out my labs</p>
+    <li>Lab 1: <a href="https://marcaflores.github.io/README.md" target="_blank">READ ME</a></li>
    
-    <p>Check out my <a href="https://marcaflores.github.io/README.md" target="_blank">READ ME</a>
-
-        for more information.</p>
+</ul>
     <h3>My favorite players</h3>
     <ul>
         <li>Lionel <b>Messi</b></li>
