--- a/lab3.html
+++ b/lab3.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,31 +12,62 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-     </head>
-    <body>
-           
-        <div class="jumbotron">
-            <center>
-            <h1 class="display-4">CSC225-Lab 3</h1>
-            </center>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <title>CSC225 - Lab 3</title>
+</head>
 
-          </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="https://marcaflores.github.io/">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Lab3</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="container mt-4"></div>
-                <p>Hello! My name is Marca Flores. I am a college student with a passion for cars, soccer, and fashion. I enjoy learning new things and spending my free time exploring these interests. Welcome to my Bootstrap Lab!</p>
-            </div>
-    </body>
+<body>
+
+<!-- Jumbotron -->
+<div class="jumbotron jumbotron-fluid">
+    <div class="container text-center">
+        <h1 class="display-4">CSC 225 Lab 3 - Marc Flores</h1>
+        <p class="lead">Exploring Responsive Web Design with Bootstrap</p>
+    </div>
+</div>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="https://marcaflores.github.io/">Home</a>
+        <a class="navbar-brand" href="https://marcaflores.github.io/README.md">Lab 1</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Lab 3</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container mt-4">
+        <p>Hello! My name is Marc Flores. I am a college student with a passion for cars, soccer, and fashion. I enjoy learning new things and spending my free time exploring these interests. Welcome to my Bootstrap Lab!</p>
+
+      <!-- List with Image -->
+<div class="row">
+    <div class="col-md-6">
+        <h3>My Top 5 Favorite Movies</h3>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item">Scott Pilgrim vs. the World</li>
+            <li class="list-group-item">Cars 2</li>
+            <li class="list-group-item">Mid90s</li>
+            <li class="list-group-item">(500) Days of Summer</li>
+            <li class="list-group-item">Whiplash</li>
+        </ol>
+    </div>
+    <div class="col-md-6 text-center">
+        <img src="images/scottPoster.jpg" class="img-fluid rounded" alt="A collection of my favorite movies">
+    </div>
+</div>
+
+        <!-- Horizontal Rule with Date and Author -->
+        <hr>
+        <p class="text-center"><strong>March 13, 2025 - Marc Flores</strong></p>
+    </div>
+
+</body>
+
 </html>
