--- a/lab3.html
+++ b/lab3.html
@@ -52,8 +52,8 @@
         <h3>My Top 5 Favorite Movies</h3>
         <ol class="list-group list-group-numbered">
             <li class="list-group-item">Scott Pilgrim vs. the World</li>
-            <li class="list-group-item">Cars 2</li>
-            <li class="list-group-item">Mid90s</li>
+            <li class="list-group-item">Car 2</li>
+            <li class="list-group-item">Mid90's</li>
             <li class="list-group-item">(500) Days of Summer</li>
             <li class="list-group-item">Whiplash</li>
         </ol>
