--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <ul>
     <p>Check out my labs</p>
     <li>Lab 1: <a href="https://marcaflores.github.io/README.md" target="_blank">READ ME</a></li>
+    <li>Lab 2: <a href="https://marcaflores.github.io" target="_blank">Lab 2</a></li>
+    <li>Lab 3: <a href="https://marcaflores.github.io/lab3" target="_blank">Lab 3</a></li>
    
 </ul>
     <h3>My favorite players</h3>
