--- a/lab3.html
+++ b/lab3.html
@@ -26,21 +26,27 @@
 </div>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="https://marcaflores.github.io/">Home</a>
-        <a class="navbar-brand" href="https://marcaflores.github.io/README.md">Lab 1</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Lab 3</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="https://marcaflores.github.io/">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="https://marcaflores.github.io/README.md">Lab 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://marcaflores.github.io/">Lab 2</a> <!-- Lab 2 link -->
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="lab3.html">Lab 3</a> <!-- Lab 3 link -->
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
     <!-- Main Content -->
     <div class="container mt-4">
