added link to lab 4

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li>Lab 1: <a href="https://marcaflores.github.io/README.md" target="_blank">READ ME</a></li>
     <li>Lab 2: <a href="https://marcaflores.github.io" target="_blank">Lab 2</a></li>
     <li>Lab 3: <a href="https://marcaflores.github.io/lab3" target="_blank">Lab 3</a></li>
+    <li>Lab 4: <a href="https://marcaflores.gi6thub.io/lab4" target="_blank">Lab 4</a></li>
    
 </ul>
     <h3>My favorite players</h3>
