--- a/lab3.html
+++ b/lab3.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="lab3.html">Lab 3</a> <!-- Lab 3 link -->
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="lab4.html">Lab 4</a> <!-- Lab 4 link -->
+            </li>
         </ul>
     </div>
 </nav>
