--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <li>Lab 2: <a href="https://marcaflores.github.io" target="_blank">Lab 2</a></li>
     <li>Lab 3: <a href="https://marcaflores.github.io/lab3" target="_blank">Lab 3</a></li>
     <li>Lab 4: <a href="https://marcaflores.github.io/lab4" target="_blank">Lab 4</a></li>
+    <li>Lab 4: <a href="https://marcaflores.github.io/lab5" target="_blank">Lab 5</a></li>
+
    
 </ul>
     <h3>My favorite players</h3>
