--- a/lab5.html
+++ b/lab5.html
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="https://marcaflores.github.io/">Lab 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="lab3.html">Lab 3</a>
+                    <a class="nav-link" href="https://marcaflores.github.io/lab3">Lab 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="lab4">Lab 4</a>
+                    <a class="nav-link" href="https://marcaflores.github.io/lab4">Lab 4</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="lab5">Lab 5</a>
