--- a/PokeFinal/details.html
+++ b/PokeFinal/details.html
@@ -82,6 +82,8 @@
           <li class="nav-item"><a class="nav-link" href="abilities.html">Abilities</a></li>
           <li class="nav-item"><a class="nav-link" href="types.html">Types</a></li>
           <li class="nav-item"><a class="nav-link" href="generations.html">Generations</a></li>
+          <li class="nav-item"><a class="nav-link" href="teamBuilder.html">Team Builder</a></li>
+
         </ul>
       </div>
     </div>
