--- a/PokeFinal/index.html
+++ b/PokeFinal/index.html
@@ -123,7 +123,7 @@
           <img src="${pokeData.sprites.front_default}" class="card-img-top mx-auto" alt="${pokeData.name}">
           <div class="card-body">
             <h5 class="card-title text-capitalize">#${pokeData.id} ${pokeData.name}</h5>
-            <a href="details.html?name=${pokeData.name}" class="btn btn-primary btn-sm">View Details</a>
+            <a href="details.html?name=${pokeData.name}" class="btn btn-primary btn-sm">See Stats</a>
           </div>
         </div>
       `;
