--- a/PokeFinal/details.html
+++ b/PokeFinal/details.html
@@ -65,7 +65,7 @@
   <!-- Jumbotron -->
   <div class="jumbotron jumbotron-fluid py-4 mb-3">
     <div class="container text-center">
-      <h1 class="display-4">Pokémon Details</h1>
+      <h1 class="display-4">Pokémon Info</h1>
       <p class="lead">CSC 225 Final Project — Marc Flores</p>
     </div>
   </div>
@@ -89,7 +89,7 @@
     </div>
   </nav>
 
-  <!-- Pokémon Details Container -->
+  <!-- Pokémon info Container -->
   <div class="container">
     <div id="pokemon-details" class="row justify-content-center">
       <!-- Pokémon info will load here -->
@@ -170,7 +170,7 @@
 
                 <div class="d-flex justify-content-center gap-3 mt-4">
                   <a href="details.html?name=${pokemon.id - 1}" class="btn btn-primary">Prev Pokémon</a>
-                  <a href="index.html" class="btn btn-primary">Back to List</a>
+                  <a href="index.html" class="btn btn-primary">Return Home</a>
                   <a href="details.html?name=${pokemon.id + 1}" class="btn btn-primary">Next Pokémon</a>
                 </div>
               </div>
