--- a/PokeFinal/detailsGeneration.html
+++ b/PokeFinal/detailsGeneration.html
@@ -73,7 +73,7 @@
 <body onload="loadGeneration()">
   <div class="jumbotron jumbotron-fluid py-4 mb-3">
     <div class="container text-center">
-      <h1 class="display-4">Generation Details</h1>
+      <h1 class="display-4">Generation Info</h1>
       <p class="lead">CSC 225 Final Project — Marc Flores</p>
     </div>
   </div>
