--- a/PokeFinal/generations.html
+++ b/PokeFinal/generations.html
@@ -74,6 +74,9 @@
           <li class="nav-item"><a class="nav-link" href="abilities.html">Abilities</a></li>
           <li class="nav-item"><a class="nav-link" href="types.html">Types</a></li>
           <li class="nav-item"><a class="nav-link active" href="generations.html">Generations</a></li>
+          <li class="nav-item"><a class="nav-link" href="teamBuilder.html">Team Builder</a></li>
+          
+          
         </ul>
       </div>
     </div>
